fixed alignment of questionnaire list table, resolved CH1-I119 bug and added assessment instruction table layout page

--- a/src/components/TableComponent.css
+++ b/src/components/TableComponent.css
@@ -31,7 +31,7 @@
 /* .table-blk .MuiCheckbox-root svg{width: 13px;height: 12px;} */
 .table-blk .MuiTableCell-root {
     font-family: "ProximaNova-Regular", serif, sans-serif;
-    padding: 0 10px 0 0;
+    padding: 0 15px 0 0;
     border-bottom: none;
     font-size: 14px;
 }
@@ -84,10 +84,10 @@
 }
 
 .table-blk-without-checkbox .MuiTableCell-head {
-    padding: 0px 10px !important;
+    padding: 0px 15px !important;
 }
 .table-blk-without-checkbox .MuiTableCell-root {
-    padding: 0px 10px !important;
+    padding: 0px 15px !important;
 }
 
 .card-wrapper .table-footer {
@@ -218,14 +218,14 @@
 }
 
 .table-blk-role .MuiTableCell-head {
-    padding: 0 20px !important;
+    padding: 0 15px !important;
     text-align: center;
 }
 .table-blk-role td {
     padding: 0px !important;
 }
 .table-blk-role td:first-child {
-    padding: 0 16px !important;
+    padding: 0 15px !important;
 }
 .table-blk-role .MuiTableCell-head:nth-child(2) {
     padding: 15px !important;
